--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "contact_keeper",
   "version": "0.1.0",
   "private": true,
-  "main":"server.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js"
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.7",
     "express": "^4.18.1",
@@ -22,11 +23,9 @@
     "mongoose": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
- 
-  
   "devDependencies": {
     "concurrently": "^7.3.0",
     "nodemon": "^2.0.19"
