--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
+node_modules/
+/config/production.json
+/config/default.json
 
-/node_modules
-/contact-keeper
+/client/build
 
+.DS_Store
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
