--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.3.3",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy":"http://localhost:5000"
 }
